<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="end"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/txtTarjetaTitulo"
                style="@style/text_style_title"
                android:text="@string/titulo" />

            <TextView
                android:id="@+id/txtTarjetaSubtitulo"
                style="@style/text_style_subtitle"
                android:text="@string/titulo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal"
                tools:ignore="RtlHardcoded">

                <Button
                    android:id="@+id/btnEliminar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eliminar"
                    app:backgroundTint="@color/danger"
                    android:layout_marginRight="15dp"
                    app:icon="@drawable/baseline_delete_24" />

                <Button
                    android:id="@+id/btnEditar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/editar"
                    app:backgroundTint="@color/primary"
                    app:icon="@drawable/baseline_edit_24" />
            </LinearLayout>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</LinearLayout>